# FII-AdvRN-Project

./: .gitignore  Dockerfile.postgres  README.md  gnd-import.ipynb  main.py  postgres-initdb.sh  pyproject.toml  tibkat-import.ipynb  tibkat-verify.ipynb
src/: finetune-sent-trans.ipynb  gnd-import-raw.ipynb  st-perform-analysis.ipynb  tibkat-import-raw.ipynb
varianta1/: gnd-import.ipynb  tibkat-import.ipynb  tibkat-verify.ipynb
varianta2/: gnd-import.ipynb  gnd_vis.ipynb
varianta2/src/: fix-gnd.ipynb  label-embeddings.ipynb  stft-perform-analysis.ipynb
