[tool.poetry]
name = "fii-advrn-project"
version = "0.1.0"
description = ""
authors = ["Stoica Tedy <stoicatedy@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"
transformers = "^4.47.0"
langchain-huggingface = "^0.1.2"
langchain-community = "^0.3.9"
langchain = "^0.3.9"
psycopg2 = "^2.9.10"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
