[tool.poetry]
name = "fii-advrn-project"
version = "0.1.0"
description = ""
authors = ["Stoica Tedy <stoicatedy@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"
transformers = "^4.47.0"
langchain-huggingface = "^0.1.2"
langchain-community = "^0.3.9"
langchain = "^0.3.9"
psycopg2 = "^2.9.10"
pyld = "^2.0.4"
langgraph = "^0.2.59"
langchain-experimental = "^0.3.3"
sentence-transformers = "^3.3.1"
huggingface-hub = "^0.26.5"
text-generation = "^0.7.0"
google-search-results = "^2.4.2"
numexpr = "^2.10.2"
langchainhub = "^0.1.21"
sentencepiece = "^0.2.0"
jinja2 = "^3.1.4"
bitsandbytes = "0.42.0"
accelerate = "^1.2.1"
json-repair = "^0.31.0"
langchain-openai = "^0.2.14"
langchain-postgres = "^0.0.12"
faiss-cpu = "^1.9.0.post1"
pyvis = "^0.3.2"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
